# solana-mev-bot

./: .gitignore  LICENSE  README.md  config.yaml
analytics/: README_ANALYTICS.md  ml_predictor.py  requirements.txt  simulator.py  utils.py
core/: Cargo.toml  README_CORE.md
core/src/: config.rs  main.rs  mempool.rs  signer.rs  strategy.rs  submission.rs  tx_builder.rs
core/tests/: integration_test.rs
dashboard/: README_DASHBOARD.md  go.mod  main.go
dashboard/static/: index.html
scripts/: build_unix.sh  build_windows.bat  run_mevbot.bat  run_mevbot.sh
