[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
anyhow = "1.0"
